<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="options">options</string>
    <string name="avatar">avatar</string>
    <string name="likes">Likes</string>
    <string name="share">share</string>
    <string name="views">views</string>
    <string name="save">Save</string>
    <string name="post_text">Post text</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_close">"Close "</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">save</string>
    <string name="add_post">add post</string>
    <string name="videoCover">video cover</string>
    <string name="ic_play">play</string>
    <string name="notification_user_liked">"User %1$s liked %2$s\'s post"</string>
    <string name="channel_remote_name">Server notification</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s published a new post</string>
</resources>