<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_space"
        android:layout_height="@dimen/post_avatar_space"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:textStyle="bold"
        android:textColor="#2B5279"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@+id/options"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:text="Автор поста" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="@+id/author"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="12.08.2022" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="@style/Widget.AppTheme.OptionsButton"
        android:checkable="false"
        android:contentDescription="@string/options"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="published, avatar, options" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier1"
        tools:text=""/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postContent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_likes_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:checkable="true"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        android:contentDescription="@string/likes"
        tools:text="100.1k"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_share_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:checkable="false"
        style="@style/Widget.AppTheme.ShareButton"
        app:layout_constraintStart_toEndOf="@id/post_likes_button"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        android:contentDescription="@string/share"
        tools:text="100.1k"
        />

    <ImageView
        android:id="@+id/views_image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/views"
        app:layout_constraintBottom_toBottomOf="@+id/post_share_button"
        app:layout_constraintEnd_toStartOf="@id/views_count"
        app:layout_constraintTop_toTopOf="@+id/post_share_button"
        style="@style/Widget.AppTheme.Views" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/views_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@+id/views_image"
        app:layout_constraintTop_toTopOf="@id/views_image"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="10k" />

</androidx.constraintlayout.widget.ConstraintLayout>