<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/post"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="editInfoLayout" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_text"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        android:padding="@dimen/common_spacing"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_save_24"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/content"
        app:layout_constraintBottom_toBottomOf="@id/content"
        tools:ignore="ImageContrastCheck"
        tools:text="" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/content"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <ImageView
            android:id="@+id/editImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/half_common_spacing"
            android:layout_marginTop="@dimen/half_common_spacing"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menu_edit"
            app:srcCompat="@drawable/ic_edit_pen_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/editPostAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_common_spacing"
            android:layout_marginEnd="@dimen/half_common_spacing"
            android:textStyle="bold"
            android:textColor="#2B5279"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="@+id/editImage"
            app:layout_constraintBottom_toTopOf="@+id/editContent"
            app:layout_constraintEnd_toStartOf="@+id/editCloseImage"
            app:layout_constraintStart_toEndOf="@+id/editImage"
            tools:text="Автор поста//////////////////////////////////////" />

        <TextView
            android:id="@+id/editContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_common_spacing"
            android:layout_marginEnd="@dimen/half_common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/editPostAuthor"
            app:layout_constraintBottom_toBottomOf="@id/editImage"
            app:layout_constraintEnd_toStartOf="@id/editCloseImage"
            app:layout_constraintStart_toEndOf="@+id/editImage"
            tools:text="Изменяемый контент//////////////////////////////////////" />

        <ImageButton
            android:id="@+id/editCloseImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_close"
            android:scaleX="1.25"
            android:scaleY="1.25"
            android:src="@drawable/ic_edit_close_24"
            app:layout_constraintBottom_toBottomOf="@+id/editImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/editImage"
            tools:ignore="ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
